@@ -135,9 +135,17 @@ libpcre_la_SOURCES = \
   ucp.h \
   ucpinternal.h \
   ucptable.h
+  
+## This file is generated as part of the building process, so don't distribute.
 nodist_libpcre_la_SOURCES = \
   pcre_chartables.c
-EXTRA_DIST += pcre_printint.src
+   
+# The pcre_printint.src file is #included by some source files, so it must be
+# distributed. In an Autotools world, config.h is generated from config.h.in,
+# but, like pcre.h, we want to include it in the distribution so that users
+# building without Autotools support have an easier time of it.
+EXTRA_DIST += pcre_printint.src config.h
+
 libpcre_la_LDFLAGS = $(EXTRA_LIBPCRE_LDFLAGS)
 
 CLEANFILES += pcre_chartables.c
